# tcp-daytime-server

./: BoostTcpEndpoint.hpp  CMakeLists.txt  ChronoTimeEndpoing.cpp  ChronoTimeEndpoing.hpp  Handlers.hpp  IGetTimeEndpoint.hpp  INetworkEndpoint.hpp  NetworkEndpoint.cpp  NetworkEndpoint.hpp  README.md  TimeManager.cpp  main.cpp
app/include/endpoints/: BoostTcpEndpoint.hpp
app/include/managment/: IGetTimeEndpoint.hpp  TimeManager.hpp
app/sources/: main.cpp
app/sources/endpoints/: ChronoTimeEndpoing.cpp
app/sources/managment/: TimeManager.cpp
tests/: CMakeLists.txt  main.cpp
tests/sources/: ChronoTimeEndpointTests.cpp  TimeManagmentTests.cpp
tests/sources/mocks/: IGetTimeEndpointMock.hpp  INetworkEndpointMock.hpp
